bug fiex for dark mode

--- a/src/components/css/login.css
+++ b/src/components/css/login.css
@@ -24,6 +24,7 @@
 
 .input input {
   width: 100%;
+  background-color: transparent;
   border: none;
 }
 
